app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-prod
  labels:
    env: production
    team: hello
