app/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  containers:
  - name: hello-app
    image: kube-trainer-app:latest
    imagePullPolicy: Never
    ports:
    - containerPort: 3000
