app/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-nodeport
  labels:
    app: hello-app
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
