app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-app-netpol
  labels:
    app: hello-app
spec:
  podSelector:
    matchLabels:
      app: hello-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: hello-app
      ports:
        - protocol: TCP
          port: 3000
